--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <section id="banner">
             <div class="banner-content">
                 <h2>Hi, I am</h2>
-                <h1>Md Anas</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <h1>Md Abu Anas Ullah Sadi</h1>
+                <p>Hi there! I am Anas, an emerging Web Developer on a mission to create engaging and accessible digital spaces. With a foundation in modern web technologies and a relentless curiosity, I enjoy tackling new challenges and refining my craft one line of code at a time. Lets build something amazing together!</p>
                 <div>
                     <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
                     <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
                 </div>
             </div>
             <div class="banner-image">
-                <img src="images/hardy.png" alt="">
+                <img src="images/Anas_bgremoved.png" alt="">
             </div>
         </section>
     </header>
@@ -43,12 +43,12 @@
         <div class="about-container">
             <div class="section-heading">
                 <h2>About Me</h2>
-                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             </div>
             <div class="about-info">
                 <div class="info-card">
                 <p>Name</p>
-                <h4>Md Anas</h4></div>
+                <h4>Md Abu Anas Ullah Sadi</h4></div>
                 <div class="info-card">
                 <p>Email</p>
                 <h4>mdsaadi1810@gmail.com</h4></div>
@@ -74,18 +74,18 @@
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill-card">
-                    <img src="images/icons/js.png" alt="">
-                    <h3>Java Script</h3>
+                    <img src="images/icons/react.png" alt="">
+                    <h3>React</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill-card">
-                    <img src="images/icons/js.png" alt="">
-                    <h3>Java Script</h3>
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3>Node.js</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill-card">
-                    <img src="images/icons/js.png" alt="">
-                    <h3>Java Script</h3>
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3>MongoDB</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
